# clasificador-repos

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  _build_definitivo.bat  _build_limpio.bat  build.rs
.github/workflows/: build.yml
docs/: HISTORIA_PROYECTO.txt  LINEA_TIEMPO_CLASIFICADOR.md  RELEASE_NOTES_v1.0.0.md
reinicios/: _borrar_cache_readme_es.bat  _refrescar_readmes_html.bat  _reset_descripciones_es.bat
src/: apply_actions.rs  atomic_io.rs  categories.rs  categories_config.rs  classify.rs  duplicates.rs  html.rs  ids.rs  index.rs  lib.rs  llm.rs  main.rs  moves.rs  paths.rs  readme.rs  reclassify.rs  scan.rs  secrets.rs  topic_discovery.rs  wiki.rs
src/gui/: app.rs  helpers.rs  mod.rs  theme.rs  types.rs  workers.rs
templates/: buscador.html  readme_viewer.html
