[package]
name = "clasificador"
version = "1.0.0"
edition = "2021"
authors = ["jlmera"]
description = "Clasificador de repositorios — versión definitiva"

[[bin]]
name = "clasificador-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "clasificador"
path = "src/main.rs"

[lib]
name = "clasificador"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
walkdir = "2"
dirs = "5"
regex = "1"
once_cell = "1"
chrono = { version = "0.4", features = ["serde"] }
ureq = { version = "2", features = ["json"] }
pulldown-cmark = "0.13"
encoding_rs = "0.8"

# GUI — solo para el binary `clasificador` (no para el CLI)
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.29"
image = { version = "0.25", default-features = false, features = ["ico", "png"] }
rfd = "0.15"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security_Cryptography",
    "Win32_Storage_FileSystem",     # SetFileAttributesW (limpia READONLY+SYSTEM+HIDDEN en .git/objects/pack/*.idx)
    "Win32_System_Threading",       # CreateMutexW + OpenProcess + QueryFullProcessImageNameW
    "Win32_UI_WindowsAndMessaging", # EnumWindows + ShowWindow + SetForegroundWindow
] }

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = "fat"          # LTO completo entre crates: +5–10% runtime, build ~2× más lento
codegen-units = 1
strip = true         # binario mínimo: sin símbolos ni debuginfo
panic = "abort"
incremental = false  # builds limpios determinísticos para release
